@@ -285,6 +285,15 @@
     </varlistentry>
 
     <varlistentry>
+      <term>Kmod (&kmod-version;) - <token>&kmod-size;</token>:</term>
+      <listitem>
+        <para>Home page: <ulink url="&kmod-home;"/></para>
+        <para>Download: <ulink url="&kmod-url;"/></para>
+        <para>MD5 sum: <literal>&kmod-md5;</literal></para>
+      </listitem>
+    </varlistentry>
+
+    <varlistentry>
       <term>Less (&less-version;) - <token>&less-size;</token>:</term>
       <listitem>
         <para>Home page: <ulink url="&less-home;"/></para>
@@ -564,14 +573,6 @@
         <para>Home page: <ulink url="&udev-home;"/></para>
         <para>Download: <ulink url="&udev-url;"/></para>
         <para>MD5 sum: <literal>&udev-md5;</literal></para>
-      </listitem>
-    </varlistentry>
-
-    <varlistentry>
-      <term>Udev Test Tarball  (&udev-version;) - <token>&udev-testfiles-size;</token>:</term>
-      <listitem>
-        <para>Download: <ulink url="&udev-testfiles-url;"/></para>
-        <para>MD5 sum: <literal>&udev-testfiles-md5;</literal></para>
       </listitem>
     </varlistentry>
 
